# libview

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
include/: anchored_element.h  animator.h  base_element.h  base_elements.h  border.h  button.h  canvas.h  clickable.h  controllable.h  elements.h  event.h  image.h  invokable.h  move_animator.h  text.h  text_renderer.h  view_lib.h  window.h
src/: anchored_element.cpp  base_element.cpp  border.cpp  button.cpp  canvas.cpp  clickable.cpp  controllable.cpp  image.cpp  move_animator.cpp  text.cpp  text_renderer.cpp  window.cpp
